# simple-assessment

./: CMakeLists.txt  README.md
cmake/: Packing.cmake
config/: capability_config.xml  exmpl_asmt_list.xml  simple_assessment_amm.xml  simple_assessment_configuration.xml
src/: CMakeLists.txt  main.cpp
